# Doc2Doc

./: .gitignore  .pre-commit-config.yaml  README.md  decorators.py  formatters.py  layout.kdl  logger.py  main.py  main_test.py  mkdocs.yml  plugins.py  pyproject.toml
docs/: index.md
tests/: test_decorators.py  test_formatters.py  test_logger.py  test_main.py  test_plugins.py
